--- a/money/styles/fratler_money_main.css
+++ b/money/styles/fratler_money_main.css
@@ -1,3 +1,6 @@
+.fm_numeric, .fm_check_ok, .fm_check_fail {
+	text-align: right;
+}
 .fm_credit, .fm_check_ok {
 	color: #2BA93D;
 /*	font-weight: bold; */
@@ -10,6 +13,7 @@
 
 .fm_fingerprint {
 	font-family:courier;
+	text-align: right;
 }
 
 .fm_message {
