Full reintegration of masters.
This closes issue #14. The hashing-algo was switched to sha384 which
should provide the best compromise in terms of speed / complexity.
Imo, this addresses issue #9 sufficiently, but still needs a stress
test.
I'd say we're pretty close to a release candidate, people!
Next stop: l10n!

--- a/accounts/styles/fratler_accounts_main.css
+++ b/accounts/styles/fratler_accounts_main.css
@@ -53,3 +53,14 @@
 	}
 }
 
+/* Autocomplete-elements */
+.fac_auto_master {
+  font-style: italic;
+}
+.fac_auto_balance {
+  float: right;
+}
+
+.fac_auto_inactive {
+  text-decoration: line-through;
+}
