Follow-through w/ FF bug; logic-bomb, minor bugs

--- a/transactions/styles/fratler_transactions_main.css
+++ b/transactions/styles/fratler_transactions_main.css
@@ -22,8 +22,11 @@
 }
 
 .fm_transaction {
-	white-space: nowrap;
 	font-size: 0.85em;
+	width: 100%;
+}
+.fm_transaction th {
+	white-space: nowrap;
 }
 
 .fratler_amount {
@@ -31,6 +34,9 @@
 }
 .fm_multiheader {
 	text-align: center;
+}
+.ft_tstamp { 
+	white-space: nowrap;
 }
 
 .fm_filter_label {
